make auth work in front + add seeders
